--- a/package.json
+++ b/package.json
@@ -61,6 +61,11 @@
     "vaul": "^1.1.2",
     "zod": "^3.24.4"
   },
+  "overrides": {
+    "react-day-picker": {
+      "date-fns": "$date-fns"
+    }
+  },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
     "@types/react": "^19.1.2",
